--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -5,6 +5,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h2>Hello world with ejs</h2>
+		<h2>Hello world with ejs !!!</h2>
 	</body>
 </html>
