--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -3,11 +3,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link href="/css/styles.css" rel="stylesheet" />
 	</head>
 	<body>
 		<h2>Hello world with ejs !!!</h2>
 		<body>
-			<img src="/images/ryo_it.jpg" />
+			<img class="ryo_it" src="/images/ryo_it.jpg" />
 		</body>
 	</body>
 </html>
