--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -35,3 +35,19 @@
     background-color: #04AA6D;
     color           : white;
 }
+
+.form-add-new {
+    width      : 500px;
+    margin     : 0 auto;
+    padding-top: 100px
+}
+
+.input-group {
+    padding: 10px;
+}
+
+button {
+    margin : 10px;
+    cursor : pointer;
+    padding: 5px;
+}
