--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,5 +13,25 @@
 			<a href="#contact">Contact</a>
 			<a href="#about">About</a>
 		</div>
+		<div class="form-add-new">
+			<fieldset>
+				<legend>Form add new users:</legend>
+				<div class="input-group">
+					<label>Email: </label>
+					<input type="text" />
+				</div>
+				<div class="input-group">
+					<label>Name: </label>
+					<input type="text" />
+				</div>
+				<div class="input-group">
+					<label>City: </label>
+					<input type="text" />
+				</div>
+				<div>
+					<button>Save</button>
+				</div>
+			</fieldset>
+		</div>
 	</body>
 </html>
