--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,24 +14,29 @@
 			<a href="#about">About</a>
 		</div>
 		<div class="form-add-new">
-			<fieldset>
-				<legend>Form add new users:</legend>
-				<div class="input-group">
-					<label>Email: </label>
-					<input type="text" />
-				</div>
-				<div class="input-group">
-					<label>Name: </label>
-					<input type="text" />
-				</div>
-				<div class="input-group">
-					<label>City: </label>
-					<input type="text" />
-				</div>
-				<div>
-					<button>Save</button>
-				</div>
-			</fieldset>
+			<!-- method : POST -> update/create ( handle in routes/web) -->
+			<form action="/create-user" method="post">
+				<fieldset>
+					<legend>Add new users:</legend>
+					<div class="input-group">
+						<label>Email: </label>
+						<input type="text" name="email" />
+					</div>
+					<div class="input-group">
+						<label>Name: </label>
+						<input type="text" name="name" />
+					</div>
+					<div class="input-group">
+						<label>City: </label>
+						<input type="text" name="city" />
+					</div>
+					<div>
+						<button>Save</button>
+					</div>
+				</fieldset>
+			</form>
 		</div>
 	</body>
 </html>
+
+<!-- Note: add express.json in server.js to handle request body - post -->
