--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,33 +8,25 @@
 
 	<body>
 		<div class="topnav">
-			<a class="active" href="#home">Home</a>
-			<a href="#news">News</a>
-			<a href="#contact">Contact</a>
-			<a href="#about">About</a>
+			<a class="active" href="/">Home</a>
+			<a href="/create">Create User</a>
 		</div>
-		<div class="form-add-new">
-			<!-- method : POST -> update/create ( handle in routes/web) -->
-			<form action="/create-user" method="post">
-				<fieldset>
-					<legend>Add new users:</legend>
-					<div class="input-group">
-						<label>Email: </label>
-						<input type="text" name="email" />
-					</div>
-					<div class="input-group">
-						<label>Name: </label>
-						<input type="text" name="name" />
-					</div>
-					<div class="input-group">
-						<label>City: </label>
-						<input type="text" name="city" />
-					</div>
-					<div>
-						<button>Save</button>
-					</div>
-				</fieldset>
-			</form>
+		<div class="table-container">
+			<div class="title">List Users</div>
+			<table>
+				<tr class="fields_row">
+					<th>ID</th>
+					<th>Email</th>
+					<th>Name</th>
+					<th>City</th>
+				</tr>
+				<tr>
+					<td>Alfreds Futterkiste</td>
+					<td>Maria Anders</td>
+					<td>Germany</td>
+					<td>Germany</td>
+				</tr>
+			</table>
 		</div>
 	</body>
 </html>
