--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -29,7 +29,7 @@
 						<input type="text" name="city" />
 					</div>
 					<div>
-						<button>Save</button>
+						<button class="btn_add">Save</button>
 					</div>
 				</fieldset>
 			</form>
