--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,6 +12,7 @@
 			<a href="/create">Create User</a>
 		</div>
 		<div class="table-container">
+			<%= JSON.stringify(listUsers) %>
 			<div class="title">List Users</div>
 			<table>
 				<tr class="fields_row">
@@ -19,12 +20,17 @@
 					<th>Email</th>
 					<th>Name</th>
 					<th>City</th>
+					<th>Actions</th>
 				</tr>
 				<tr>
 					<td>Alfreds Futterkiste</td>
 					<td>Maria Anders</td>
 					<td>Germany</td>
 					<td>Germany</td>
+					<td>
+						<button>Edit</button>
+						<button>Delete</button>
+					</td>
 				</tr>
 			</table>
 		</div>
