Design View Edit User

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -41,7 +41,7 @@
 					<td><%=user.name %></td>
 					<td><%=user.city %></td>
 					<td>
-						<button>Edit</button>
+						<a href="/update">Edit</a>
 						<button>Delete</button>
 					</td>
 				</tr>
