--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -18,15 +18,15 @@
 					<legend>Update a users:</legend>
 					<div class="input-group">
 						<label>Email: </label>
-						<input type="text" name="email" />
+						<input type="text" name="email" value="<%= userEdit.email %>" />
 					</div>
 					<div class="input-group">
 						<label>Name: </label>
-						<input type="text" name="name" />
+						<input type="text" name="name" value="<%= userEdit.name %>" />
 					</div>
 					<div class="input-group">
 						<label>City: </label>
-						<input type="text" name="city" />
+						<input type="text" name="city" value="<%= userEdit.city %>" />
 					</div>
 					<div>
 						<button class="btn_add">Update</button>
