Design Form Delete User

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+.table-container {
+    margin: 0 100px;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
