--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -42,7 +42,13 @@
 					<td><%=user.city %></td>
 					<td>
 						<a href="/update/<%=user.id %>">Edit</a>
-						<button>Delete</button>
+						<form
+							action="delete-user/<%=user.id %>"
+							method="post"
+							style="margin-top: 5px"
+						>
+							<button>Delete</button>
+						</form>
 					</td>
 				</tr>
 				<% }); %>
